<resources>
    <string name="app_name">Dashboard</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="milatronics_login_logo_desc">Milatronics Login Page</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="nameRequired">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="or">OR</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_verification_code">6-Digit Verification Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="prices">Prices</string>
    <string name="devices">Devices</string>
    <string name="stats">Stats</string>
    <string name="view_all">View All</string>
    <string name="our_products_title">Our Products</string>
    <string name="our_products_desc">We integrate sensors, mobile connectivity and decision tools for affordable aquaculture monitoring and automation. It helps farmers to monitor their ponds in a better way and reduce their investments to make it sustainable. cFog provides an array of parameters to let you know the present and future water quality of your pond. With cFog Pond automation unit you can setup alerts customized for your needs.</string>
    <string name="product_1_title">Pond Meter</string>
    <string name="product_1_description">Real-time monitoring of ponds with intelligent control of aerators and feeders, reduces production costs and increases yield and make it sustainable. Significantly reduces the risk for farmer and helps him to increase productivity</string>
    <string name="product_2_title">Aerators</string>
    <string name="product_2_description">Automatic control of aerators based on DO levels reduces energy bills by 20%.</string>
    <string name="product_3_title">Smart feeder</string>
    <string name="product_3_description">Precise automatic feeder with Smart controls. Enabling you to monitor the feed for your fish with all of the latest technology. Adjusts the feed based on water quality and weather data, ensures that shrimp get correct amount of feed intelligently. Feeding schedules can be configured from smart-phone app. </string>
    <string name="shrimp_diseases_title">Shrimp Diseases</string>
    <string name="shrimp_diseases_desc">Shrimp diseases description</string>
    <string name="disease_1_title">White spot</string>
    <string name="disease_1_description">
		The main cause for the white spot disease is the white spot syndrome virus (WSSV). WSSV is the lone virus of the genus Whispovirus which is the only genus in the family Nimaviridae. This virus is lethal and affects only crustaceans. The outbreaks of this virus can wipe out the entire population of shrimp in a farm within a few days. This disease infects prawns, crabs, lobsters from marine, fresh or brackish waters.
        \n\n<b>Occurrence</b>
        \nThe virus can infect the shrimp at any stage of its lifecycle. From eggs to broodstock the virus can develop rapid mortality. About 80% of mortalities occur within a period of three to ten days. Transmission of the disease occurs vertically from infected broodstock and horizontally through cannibalism of dying and sick prawns. There is a possibility of transmission through contaminated water also. Birds can also be carriers by transmitting the disease from one pond to another.
        \n\n<b>Agent</b>
        \nPart of the white spot syndrome baculovirus complex (recently renamed as nimavirus).
        \n\n<b>Detection</b>
        \nThe disease can be identified by watching for some signs in the animals.
        \n1. Acutely infected shrimp show reduced food consumption
        \n2. Lethargy
        \n3. High mortality of 100% is seen within 3 to10 days of onset of symptoms.
        \n4. Loose cuticles with white spots of 0.5-2.0 mm diameter is observed. It is most apparent inside the carapace.
        \n5. Moribund shrimp often have pink to reddish-brown colouration due to expansion of cuticular chromatophores &amp; few if any white spots
        \n\n<b>Precautions</b>
        \n1. SPF brood stock needs to be used.
        \n2. The eggs/nauplii need to be washed and disinfected with iodine and formalin.
        \n3. Broodstock, nauplii needs to be screened.
        \n4. PL and pond stages
        \n5. Rapid changes in water quality need to be avoided.
        \n6. Water temperature needs to be maintained above 30°C.
        \n7. Stress needs to be avoided
        \n8. The use of fresh feeds such as trash fish needs to be avoided.
        \n9. Water exchange needs to be minimized to prevent the entry of virus carriers.
        \n\n<b>Treatment</b>
        \nThe infected ponds need to be treated with 30 ppm of chlorine to kill the infected shrimp and carriers. Associated equipment also needs to be disinfected.
        \n\n*100% cure is not assured for White Spot.
    </string>
    <string name="disease_2_title">EHP</string>
    <string name="disease_2_description">
        Enterocytozoon hepatopenaei (EHP) is a microsporidian parasite that was named from the giant or black tiger shrimp. EHP is a categorised fungal parasite. This disease was discovered in slow growing shrimp. EHP causes the parasite to colonise the tubules in hepatopancreas. EHP does not necessarily result in mortality but the infection can cause damage to the organ which results in deprivation of absorption of nutrients. This further leads to poor growth of the shrimp. This disease reduces the immunity of the shrimp thereby leaving the shrimp open to exposure to other infections. Due to difficulty in control of this disease, EHP has been affecting shrimp production all over the continent and is a constant challenge for the aquaculture industry.
        \n\n<b>Occurrence and Transmission</b>
        \nEHP gets transmitted through infected PL and also through the remaining spores present in pond water and soil.
        \nAgent: Enterocytozoon hepatopenaei Family: Enterocytozoonidae
        \nPhylum: Microsporidia (Closely related to fungi)
        \nSize: About 1.1 ± 0.2 by 0.6 ± 0.1um. Surrounded by a double layered spore wall
        \n\n<b>Impact on Shrimp Aquaculture</b>
		\n1. Unprofitable harvest
        \n2. Retarded growth (usually not grossly visible until 2nd month of pond cultivation)
        \n3. Increase in size variation
        \n4. Susceptible to white faeces syndrome (WFS) and acute hepatopancreatic necrosis disease (AH PN D)
        \n\n<b>Precautions</b>
        \n1. Broodstock maturation facility and hatchery facility has to be clean
		\n2. Use SPF broodstock
        \n3. Wash &amp; disinfect eggs/nauplii with iodine, formalin
        \n4. Screen brood stock, nauplii
        \n5. PL &amp; pond stages
        \n6. Rapid changes in water quality must be avoided.
		\n7. Water temperature >30 °C needs to be maintained.
		\n8. Stress needs to be avoided.
        \n9. Usage of fresh feeds such as trash fish need to be avoided.Water exchange must be minimized to prevent the entry of virus carriers
        \n\n<b>Treatment</b>
        \nTreat infected ponds &amp; hatcheries with 30 ppm chlorine to kill infected shrimp &amp; carriers. All associated equipment also needs to be disinfected.Control of the disease in hatcheries is possible only when the hatchery and all associated areas are maintained well. All shrimp must be removed from the hatchery and then washed thoroughly with 2.5% NaOH solution. Once this step is finished the entire hatchery must be cleaned to remove the NaOH traces and the premises needs to be dried for seven days. The final step is rinsing with acidified chlorine.
        \nTo disinfect the ponds the following steps can be taken
        \n1. Application of CaO (quick, burnt, slaked, hot lime)
		\n2. Cao needs to be added at 6ton/ha.
        \n3. Add Cao to the dry pond sediment. Once it is added moisten it to activate.
        \n4. Leave the pond for a week
        \n5. The pH has to rise above 12 and then reverse back to the normal range.
        \n\n*100% cure is not assured for EHP
    </string>
    <string name="disease_3_title">Vibriosis</string>
    <string name="disease_3_description">
        Vibriosis is the most prevalent disease in fishes and other organisms. It is caused by the Vibrio spp and is responsible for the high rate of mortality in aquaculture throughout the world. Vibriosis is a bacterial disease that is caused by Vibrio. Vibrio is a Gram-negative bacteria from the Vibrionaceae family. It is found everywhere around the world in all marine crustaceans which includes shrimp. Vibriosis is a bacterial disease responsible for high mortality of shrimp. It is one of the major diseases prevalent worldwide in cultured shrimp industry. Vibriosis is a series of bacterial infections caused by a bacterium that belongs to the genus Vibrio. Certain studies show that usage of microalgae, bacteriophage, and probiotic bacteria have been found to have a higher potential in reducing vibriosis.
		\n<b>Occurrence and Detection</b>
		\nThe agent for the occurrence of this disease is the: Vibrio spp., particularly V. harveyi &amp; V. parahaemolyticus. Vibrio infections are commonly called black shell disease, tail rot, septic hepatopancreatic necrosis, swollen hindgut syndrome. These are some signs that can be looked out for
		\n1. Reduction or loss of appetite.
		\n2. Lethargy
		\n3. Red discolouration of the body
		\n4. Yellowing of the gill tissue.
		\n5. White patches in the abdominal muscle.
		\n6. Discolouration and necrotic heptopancreas.
		\n7. Luminescence
		\n\nIn hatcheries, it is seen as
		\n1. Luminescence in water &amp;/or shrimp body
		\n2. Disruption of gut
		\n3. Fouling of body
		\n4. High mortality
		\n\nIn ponds, it is seen as
		\n1. Red discoloration of shrimp (especially tails) &amp; internal &amp; external necrosis
		\n2. Low feeding
		\n3. Chronic mortality 4.Often a secondary infection resulting from poor environmental management weakens shrimp which become susceptible to viral infections
		\n<b>Precautions</b>
		\nVibrio as a disease adapts well to different environmental conditions hence it is difficult to remove as become dormant under unfavourable conditions. In shrimp farms, Vibrio are found in the pond water and the gut of the shrimp.
		\n1. Management of the pond water is the most important step in Vibrio prevention.
		\n2. Management of gut health is the net most important step.
		\n\nFrequent checks must be carried out to know Vibrio population in shrimp gut and pond water to understand the levels. Careful system management is key to control Vibrio. In hatcheries, we must make sure
		\n1. Disinfect facilities are maintained
		\n2. Equipment is clean and uncontaminated.
		\n3. Water quality and Worker hygiene is maintained.
		\n4. Use of bacteria-free live feeds
		\n5. Cover culture tanks with plastic sheets to prevent transfer
		\n\nIn ponds, we must make sure
		\n1. Prevention by proper preparation
		\n2. Bloom control
		\n3. Good water &amp; feed management
		\n4. Control of stocking density
		\n5. Aeration to maintain optimal environmental conditions throughout the culture cycle.
    </string>
    <string name="disease_4_title">White Gut Disease</string>
    <string name="shrimp_farming_tips_title">Shrimp Farming Tips</string>
</resources>