<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context = ".login.SignInFragment">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/milatronics_login_page"
        app:layout_constraintBottom_toTopOf="@id/email_text_input_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/milatronics_logo_with_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_sign_in" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        android:text="@string/sign_in" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/account_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/sign_up_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/account_question"
            android:text="@string/sign_up_now"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>