<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context = ".login.ConfirmResetPasswordFragment">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/confirmation_text_input_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/milatronics_logo_with_text"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmation_text_input_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:hint="@string/enter_verification_code"
        app:layout_constraintBottom_toTopOf="@id/center"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmation_edit_text_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/center"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toBottomOf="@id/new_password_text_input">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmation_button_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:text="@string/confirm" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button_reset_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/confirmation_button_reset_password"
            android:text="@string/cancel" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>