<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context = ".login.SignUpFragment">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/milatronics_login_page"
        app:layout_constraintBottom_toTopOf="@id/confirmation_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/milatronics_logo_with_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmation_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_verification_code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirmation_text_input">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/confirm" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button_confirmation"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/confirmation_button"
            android:text="@string/cancel" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>