<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:paddingTop="16dp"
           android:layout_height="match_parent"
           android:layout_width="match_parent">


           <androidx.viewpager2.widget.ViewPager2
               android:id="@+id/viewPager2"
               android:layout_width="0dp"
               android:layout_height="150dp"
               android:paddingStart="80dp"
               android:paddingEnd="80dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />


       </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/products_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="8dp">

            <TextView
                android:id="@+id/our_products_home_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/our_products_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/view_all_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/view_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/our_products_home_title_textview"
                tools:itemCount="3"
                tools:listitem="@layout/product_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/diseases_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/diseases_home_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/shrimp_diseases_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/view_all_diseases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/view_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/diseases_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/diseases_home_title_textview"
                tools:itemCount="3"
                tools:listitem="@layout/disease_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tips_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tips_home_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/shrimp_farming_tips_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/view_all_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/view_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tips_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tips_home_title_textview"
                tools:itemCount="3"
                tools:listitem="@layout/tip_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>